// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H3 should render correctly 1`] = `
<DocumentFragment>
  <h3
    class="h3 alignLeft singleLine"
  >
    This is H3
  </h3>
</DocumentFragment>
`;

exports[`H3 should render correctly with \`as\` 1`] = `
<DocumentFragment>
  <p
    class="h3 alignLeft singleLine"
  >
    This is a p
  </p>
</DocumentFragment>
`;
